--- a/delta.plist
+++ b/delta.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://kmdu59.noestorage.net/apps/com.rileytestut.Delta-signed.ipa</string>
+					<string>http://kmdu59.noestorage.net/apps/delta.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
